[tool.poetry]
name = "easybrake"
version = "0.1.0"
description = "Easy work with Handbrake presets and CLI"
license = "Unlicense"
authors = ["pythoninja <pythoninja@users.noreply.github.com>"]
repository = "https://github.com/pythoninja/easybrake"
readme = "README.md"
keywords = ["handbrake", "handbrake-cli", "cli wrapper", "command generator"]

packages = [
    { include = "easybrake", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
cyclopts = "^3.1.5"
loguru = "^0.7.2"
httpx = "^0.27.2"

[tool.poetry.urls]
"Changelog" = "https://github.com/pythoninja/easybrake/blob/master/CHANGELOG.md"

[tool.poetry.scripts]
easybrake = "easybrake.cli:app"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tbump]
github_url = "https://github.com/pythoninja/easybrake"

[tool.tbump.version]
current = "0.1.0"
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "chore(release): v{new_version}"
tag_template = "v{new_version}"

[[tool.tbump.file]]
src = "README.md"
search = "Current version: v{current_version}"

[[tool.tbump.file]]
src = "src/easybrake/__init__.py"
search = "__version__ = \"{current_version}\""

[[tool.tbump.before_commit]]
name = "Bump poetry"
cmd = "poetry version {new_version}"

[[tool.tbump.before_commit]]
name = "Generate Changelog"
cmd = "git cliff --tag {new_version} --output CHANGELOG.md"

[tool.ruff]
exclude = ["tests/"]
line-length = 120
target-version = "py312"
preview = true

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "C90", # mccabe
    "E", # pycodestyle - error
    "F", # Pyflakes
    "G", # flake8-logging-format
    "N", # pep8-naming
    "Q", # flake8-quotes
    "S", # flake8-bandit
    "W", # pycodestyle - warning
    "EM", # flake8-errmsg
    "ARG", # flake8-unused-arguments
    "ANN", # flake8-annotations
    "BLE", # flake8-blind-except
    "COM", # flake8-commas
    "FURB", # refurb
    "LOG", # flake8-logging
    "ISC", # flake8-implicit-str-concat
    "PL", # Pylint
    "PT", # flake8-pytest-style
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PTH", # flake8-use-pathlib
    "PERF", # Perflint
    "RUF", # ruff-specific
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TD", # flake8-todos
    "TID", # flake8-tidy-imports
    "TRY", # tryceratops
    "UP", # pyupgrade
    "YTT"   # flake8-2020
]
ignore = [
    "ANN101",
    "ANN204",
    "ARG001",
    "UP007",
    "COM812",
    "ISC001",
    "T201",
    "ANN201",
    "PLR6301",
    "RUF027",
    "FURB110"
]

[tool.ruff.lint.pylint]
max-args = 5

[tool.ruff.lint.flake8-quotes]
avoid-escape = false

[tool.ruff.format]
quote-style = "double"
